# vibe-pantry

./: .env.example  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: d802ee325420_initial_schema.py
app/: config.py  main.py
app/models/: base.py  ingredient.py  pantry.py  recipe.py
app/routers/: ingredients.py  matching.py  pantry.py  recipes.py  ui.py
app/schemas/: ingredient.py  matching.py  pantry.py  recipe.py
app/services/: matching.py  shopping.py
app/templates/: base.html  home.html  ingredients.html  match.html  pantry.html  recipe_detail.html  recipe_form.html  recipes.html  shopping.html
